# BackTestQ

./: README.md
backend/api/: .env  alembic.ini  pyproject.toml
backend/api/alembic/: env.py
backend/api/alembic/versions/: 0001_init.py  0002_init.py
backend/api/src/trading_api/app/: config.py  db.py  main.py  models_old.py  schemas_old.py
backend/api/src/trading_api/app/api/routes/: dashboard.py
backend/api/src/trading_api/app/models/: __init__.py  portfolio.py  symbol.py
backend/api/src/trading_api/app/routes/: portfolios.py
backend/api/src/trading_api/app/schemas/: __init__.py  portfolio.py  run.py  run_output.py  strategy.py  symbol.py
backend/api/src/trading_platform_api.egg-info/: SOURCES.txt  requires.txt
dashboard/: app.py
data/: RELIANCE.csv
engine/: Cargo.toml  pyproject.toml
engine/src/: lib.rs
tools/: ingest_bars.py
worker/: .env  pyproject.toml
worker/trading_worker/: config.py  db.py  worker.py
worker/trading_worker.egg-info/: SOURCES.txt  requires.txt
