[project]
name = "trading_worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.2",
  "python-dateutil>=2.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trading_worker"]
